# CG2017

./: engine.cpp  generator.cpp  main.cpp
TrabalhoPratico/Fase1/Relatorio/: capa.tex  relatorio.toc
TrabalhoPratico/Fase2/Demo e Execs/: engine  generator  ring.3d  sistemasolar.xml
TrabalhoPratico/Fase2/Relatorio/: capa.tex  relatorio.aux  relatorio.tex  relatorio.toc
TrabalhoPratico/Fase2/src/: CMakeLists.txt  engine.cpp  generator.cpp  geometricShapes.cpp  geometricShapes.h  point3d.cpp  point3d.h  scene.cpp  scene.h
TrabalhoPratico/Fase3/Relatorio/: capa.tex  relatorio.aux  relatorio.toc
TrabalhoPratico/Fase4/Relatorio/: capa.tex  relatorio.aux  relatorio.toc
TrabalhoPratico/Primitivas/: Primitivas.sln  Primitivas.vcxproj  Primitivas.vcxproj.filters
TrabalhoPratico/Primitivas/Debug/: vc140.idb
TrabalhoPratico/Relatorio/: relatorio.aux  relatorio.tex  relatorio.toc
TrabalhoPratico/Relatorio/chapters/: conclusao.tex  parte1.tex  parte2.tex  parte3.tex
aulas/aula1/teapotcorrect/: Output-PackageManager.txt  main.cpp  teapotcorrect.sln
aulas/aula10/code/: CMakeLists.txt  main.cpp  (+3 more)
aulas/aula2/: main.cpp
aulas/aula7/: main.cpp
aulas/aula8/: catmull-rom.cpp
ola/: README.md
ola/Gerador/: Gerador.sln  Gerador.vcxproj  Gerador.vcxproj.filters
ola/Motor/: Motor.VC.opendb  Motor.sln  Motor.vcxproj  Motor.vcxproj.filters  Primitivas.h  Transformacao.h
ola/Relatorio/: capa.tex  relatorio.aux  relatorio.tex  relatorio.toc
ola/utils/: CoordsEsfericas.h  CoordsPolares.h  Ponto3D.h
ola/vbo/: packages.config  vbo.sln  vbo.vcxproj  vbo.vcxproj.filters
(+127 files in other folders)
